<resources>
    <string name="app_name">Guia6</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="salir">Salir</string>
    <string name="imagen_avatar">Imagen de avatar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="numero_0">0</string>
    <string name="numero_1">1</string>
    <string name="numero_2">2</string>
    <string name="numero_3">3</string>
    <string name="numero_4">4</string>
    <string name="numero_5">5</string>
    <string name="numero_6">6</string>
    <string name="numero_7">7</string>
    <string name="numero_8">8</string>
    <string name="numero_9">9</string>
    <string name="signo_dividir">÷</string>
    <string name="signo_multiplicar">×</string>
    <string name="signo_menos">-</string>
    <string name="punto">.</string>
    <string name="signo_igual">=</string>
    <string name="signo_mas">+</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="linear_layout">Linear Layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="table_layout">Table Layout</string>
    <string name="constraint_layout">Constraint Layout</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="registro">Registro de usuario</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="completa_datos">Completa tus datos para registrarte</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="correo_electronico">Correo</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresa_nombre">Ingresa tu nombre</string>
    <string name="ingresa_apellido">Ingresa tu apellido</string>
    <string name="ingresa_correo">correo@ejemplo.com</string>
    <string name="ingresa_contrasena">Crea una contraseña</string>
    <string name="genero">Género</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="aceptar_terminos">Acepto los términos y condiciones</string>
    <string name="registrarse">Enviar registro</string>
    <string name="campo_requerido">Campo requerido</string>
    <string name="sesion_iniciada">Sesión iniciada correctamente</string>
    <string name="selecciona_genero">Selecciona un género</string>
    <string name="acepta_terminos_aviso">Debes aceptar los términos y condiciones</string>
    <string name="registro_exitoso">Registro enviado correctamente</string>
</resources>
