<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GridLayout">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignBounds"
        android:columnCount="4"
        android:rowCount="4">

        <TextView
            android:id="@+id/numero_7"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/numero_7" />

        <TextView
            android:id="@+id/numero_8"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/numero_8" />

        <TextView
            android:id="@+id/numero_9"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/numero_9" />

        <TextView
            android:id="@+id/signo_dividir"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="0"
            android:layout_column="3"
            android:text="@string/signo_dividir" />

        <TextView
            android:id="@+id/numero_4"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/numero_4" />

        <TextView
            android:id="@+id/numero_5"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/numero_5" />

        <TextView
            android:id="@+id/numero_6"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/numero_6" />

        <TextView
            android:id="@+id/signo_por"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="1"
            android:layout_column="3"
            android:text="@string/signo_multiplicar" />

        <TextView
            android:id="@+id/numero_1"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/numero_1" />

        <TextView
            android:id="@+id/numero_2"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/numero_2" />

        <TextView
            android:id="@+id/numero_3"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="2"
            android:layout_column="2"
            android:text="@string/numero_3" />

        <TextView
            android:id="@+id/signo_menos"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="2"
            android:layout_column="3"
            android:text="@string/signo_menos" />

        <TextView
            android:id="@+id/punto"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/punto" />

        <TextView
            android:id="@+id/cero"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/numero_0" />

        <TextView
            android:id="@+id/signo_igual"
            style="@style/AppTheme.BotonCalculadora.Azul"
            android:layout_row="3"
            android:layout_column="2"
            android:text="@string/signo_igual" />

        <TextView
            android:id="@+id/signo_mas"
            style="@style/AppTheme.BotonCalculadora.Rojo"
            android:layout_row="3"
            android:layout_column="3"
            android:text="@string/signo_mas" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
