<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingHorizontal="22dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:onClick="onClickFrame"
        android:text="@string/frame_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickLinear"
        android:text="@string/linear_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickRelative"
        android:text="@string/relative_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickTable"
        android:text="@string/table_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickContraint"
        android:text="@string/constraint_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickGrid"
        android:text="@string/grid_layout"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:onClick="onClickRegistro"
        android:text="@string/registro"
        android:textAllCaps="false" />

</LinearLayout>
