<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelativeLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="88dp">

        <EditText
            android:id="@+id/input_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:autofillHints="personName"
            android:ems="10"
            android:hint="@string/nombres"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#616161" />

        <EditText
            android:id="@+id/input_apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_nombre"
            android:layout_alignParentStart="true"
            android:autofillHints="personFamilyName"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@android:color/black"
            android:textColorHint="#616161" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_apellido"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/salir"
            android:textAllCaps="false" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
